--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>An Unseen POV</title>
 </head>
 <body>
-  
+  <H1>De Y/N Map</H1>
+  <nav>
+    <a></a>
+  </nav>
+
+  <br>
+  <hr>
+  <footer> by Grazy </footer>
 </body>
 </html>
