even pauze straks verder

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>An Unseen POV</title>
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
   <H1>De Y/N Map</H1>
-  <nav>
+  <div class="topnav">
+    <a href="#home">Home</a>
     <a></a>
-  </nav>
+    <a></a>
+    <a></a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
 
   <br>
   <hr>
