de layout is in vorming ,nog niks definitief

--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
   <H1>De Y/N Map</H1>
   <div class="topnav">
     <a href="#home">Home</a>
-    <a></a>
-    <a></a>
-    <a></a>
-    <a href="#contact">Contact</a>
+    <a href="#munchies">Eat & Drinks</a>
+    <a href="#visit">Seasonal visits</a>
+    <a href="kunst">Hightivities</a>
     <a href="#about">About</a>
+    <a href="#contact">Contact</a>
   </div>
+  <div>
+    <H2>The Ultimate Y/N Travel Guide</H2>
+    <h4>Brussels</h4>
+    <h4>Bruxelles</h4>
+    <h4>Brussel</h4>
+  </div>
+  <p>
+    Brussel is geen stad die je zomaar begrijpt...Ze is een chaos/mix van talen, culturen,straten en geuren. Maar als je, zoals ik, hier je puberjaren en jongvolwassen tijd hebt doorgebracht, dan weet je: Brussel moet je voelen...volledig meemaken.
+
+    Van hangen op de trappen van de Beurs tot Zwerven tussen Matongé en de Marollen. Van Metroritten zonder bestemming tot nachten die eindigen met mitraillette in de hand. De stad is ruw, luid en chaotisch...maar ten alle tijden echt.
+
+    Soms vervloek ik haar – de eindeloze werken, de onagename geurtjes in de steegjes – maar dan vang ik een glimp van de zon met mijn stoute sigaret in de hand en weet ik..Brussel zit in mijn bloed.
+  </p>
+  <br>
 
   <br>
   <hr>
