html is voor nu klaar

--- a/index.html
+++ b/index.html
@@ -22,16 +22,48 @@
     <h4>Bruxelles</h4>
     <h4>Brussel</h4>
   </div>
-  <p>
-    Brussel is geen stad die je zomaar begrijpt...Ze is een chaos/mix van talen, culturen,straten en geuren. Maar als je, zoals ik, hier je puberjaren en jongvolwassen tijd hebt doorgebracht, dan weet je: Brussel moet je voelen...volledig meemaken.
-
+  <h3>Welkom in Brussel – Een stad die bruist</h3>
+  <p id="mijnstad">
+    Brussel is geen stad die je zomaar begrijpt/bezoekt...Ze is een chaos/mix van talen, culturen,straten en geuren. Maar als je, zoals ik, hier je puberjaren en jongvolwassen tijd hebt doorgebracht, dan weet je: Brussel moet je voelen...volledig meemaken.
+    <br>
     Van hangen op de trappen van de Beurs tot Zwerven tussen Matongé en de Marollen. Van Metroritten zonder bestemming tot nachten die eindigen met mitraillette in de hand. De stad is ruw, luid en chaotisch...maar ten alle tijden echt.
-
+    <br>
     Soms vervloek ik haar – de eindeloze werken, de onagename geurtjes in de steegjes – maar dan vang ik een glimp van de zon met mijn stoute sigaret in de hand en weet ik..Brussel zit in mijn bloed.
   </p>
   <br>
-
+  <div>
+    <h2>Where To Stay => lijst van airBnB's en hotries etc(maybe api??)</h2>
+  </div>
   <br>
+  <div>
+    <p>
+      ADD Photos/Maps op een rij en elke photo is aanklikbaar om naar een andere sectie te gaan + heeft een thema => dus niet zomaar maps en photos.
+    </p>
+  </div>
+  <br>
+  <div>
+    <h3>
+      Fun Facts About Brussels You Definitley Don't Know...
+    </h3>
+  </div>
+  <br>
+  <div>
+    <h3>
+      best time for visits
+    </h3>
+  </div>
+  <br>
+  <div>
+    <h3>
+      things to do 
+    </h3>
+  </div>
+  <br>
+  <div>
+    <h3>
+      places you HAVE to visit
+    </h3>
+  </div>
   <hr>
   <footer> by Grazy </footer>
 </body>
