begonnen aan css + images zijn binnen

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-  <H1>De Y/N Map</H1>
+  <H1>The Y/N Map  –  An Unseen POV</H1>
   <div class="topnav">
     <a href="#home">Home</a>
     <a href="#munchies">Eat & Drinks</a>
@@ -15,51 +15,58 @@
     <a href="kunst">Hightivities</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
+    <a href="verblijf">Daggamos</a>
+    <a href="facts">Fun facts</a>
+    <a href="maps">Maps</a>
   </div>
-  <div>
+  <div id="Home">
     <H2>The Ultimate Y/N Travel Guide</H2>
     <h4>Brussels</h4>
     <h4>Bruxelles</h4>
     <h4>Brussel</h4>
   </div>
-  <h3>Welkom in Brussel – Een stad die bruist</h3>
-  <p id="mijnstad">
-    Brussel is geen stad die je zomaar begrijpt/bezoekt...Ze is een chaos/mix van talen, culturen,straten en geuren. Maar als je, zoals ik, hier je puberjaren en jongvolwassen tijd hebt doorgebracht, dan weet je: Brussel moet je voelen...volledig meemaken.
-    <br>
-    Van hangen op de trappen van de Beurs tot Zwerven tussen Matongé en de Marollen. Van Metroritten zonder bestemming tot nachten die eindigen met mitraillette in de hand. De stad is ruw, luid en chaotisch...maar ten alle tijden echt.
-    <br>
-    Soms vervloek ik haar – de eindeloze werken, de onagename geurtjes in de steegjes – maar dan vang ik een glimp van de zon met mijn stoute sigaret in de hand en weet ik..Brussel zit in mijn bloed.
-  </p>
-  <br>
-  <div>
-    <h2>Where To Stay => lijst van airBnB's en hotries etc(maybe api??)</h2>
+  <div id="">
+    <h3>Welkom in Brussel – Een stad die bruist</h3>
+    <p id="mijnstad">
+      Brussel is geen stad die je zomaar begrijpt/bezoekt...Ze is een chaos/mix van talen, culturen,straten en geuren. Maar als je, zoals ik, hier je puberjaren en jongvolwassen tijd hebt doorgebracht, dan weet je: Brussel moet je voelen...volledig meemaken.
+     <br>
+      Van hangen op de trappen van de Beurs tot Zwerven tussen Matongé en de Marollen. Van Metroritten zonder bestemming tot nachten die eindigen met mitraillette in de hand. De stad is ruw, luid en chaotisch...maar ten alle tijden echt.
+     <br>
+      Soms vervloek ik haar – de eindeloze werken, de onagename geurtjes in de steegjes – maar dan vang ik een glimp van de zon met mijn stoute sigaret in de hand en weet ik..Brussel zit in mijn bloed.
+    </p>
   </div>
-  <br>
-  <div>
+    <br>
+  <div id="verblijf">
+    <h2>
+      Where To Stay => lijst van airBnB's en hotries etc(maybe api??)
+    </h2>
+  </div>
+    <br>
+  <div id="maps">
     <p>
       ADD Photos/Maps op een rij en elke photo is aanklikbaar om naar een andere sectie te gaan + heeft een thema => dus niet zomaar maps en photos.
     </p>
   </div>
   <br>
-  <div>
+  <div id="facts">
     <h3>
       Fun Facts About Brussels You Definitley Don't Know...
     </h3>
   </div>
   <br>
-  <div>
+  <div id="visit">
     <h3>
       best time for visits
     </h3>
   </div>
   <br>
-  <div>
+  <div id="munchies">
     <h3>
       things to do 
     </h3>
   </div>
   <br>
-  <div>
+  <div id="kunst">
     <h3>
       places you HAVE to visit
     </h3>
