js file komt bij elkaar maar overzicht houden is moeilijk

--- a/Main.html
+++ b/Main.html
@@ -175,5 +175,6 @@
       &copy 2025 De Y/N Gids – Brussel – By Grazy241
     </p> 
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
