niks werkt + het is laat + ik begin morgen opnieuw

--- a/Main.html
+++ b/Main.html
@@ -27,7 +27,7 @@
 </header>
   <section id="favorieten">
     <h3>Favorieten</h3>
-    <button id="sortBtn">Sorteer lijst</button>
+    <button id="sortBtn">Sorteer A-Z</button>
     <ul id="favLijst"></ul>
   </section>
 
@@ -122,6 +122,11 @@
       <button class="favBtn">❤️</button>
       <br><br>
       <input type="text" id="searchInput" placeholder="vind deze locaties?...">
+      <section id="results">
+        <h4>Resultaat</h4>
+        <p id="instructie">Ontdek de locaties van de bovenstaande plaatsen in Brussel 📌</p>
+        <ul id="locatielijst"></ul>
+      </section>
     </p>
     
   </div>
@@ -146,7 +151,13 @@
      <button class="favBtn">❤️</button>
      <br><br>
      <input type="text" id="searchInput" placeholder="vind deze locaties?...">
+     <section id="results">
+      <h4>Resultaat</h4>
+      <p id="instructie">Ontdek de locaties van de bovenstaande plaatsen in Brussel 📌</p>
+      <ul id="locatielijst"></ul>
+    </section>
 <br><br>
+<p>
      <strong>🎨 Street Art & muurschilderingen</strong>
 <br><br>
      <strong>Striproute</strong> – Muurschilderingen van Kuifje, Lucky Luke en andere Belgische striphelden verspreid over de stad.
@@ -166,8 +177,13 @@
      Brussel leeft, ademt kunst en biedt rust tegelijk. Ontdek het op jouw tempo! 🎭🎨🌳
      <br><br>
      <input type="text" id="searchInput" placeholder="vind deze locaties?..."> 
+     <br><br>
+     <section id="results">
+      <h4>Resultaat</h4>
+      <p id="instructie">Ontdek de locaties van de bovenstaande plaatsen in Brussel 📌</p>
+      <ul id="locatielijst"></ul>
+    </section>
     </p>
-    
   </div>
   <hr>
   <footer>
