nog een beetje html+css fouten proberen eruit te halen, javascript is weg het was onoverzichtelijk.

--- a/Main.html
+++ b/Main.html
@@ -12,14 +12,12 @@
   <div class="topnav">
     <a href="#home">Home</a>
     <a href="#munchies">Eat & Drinks</a>
-    <a href="#kunst">Hightivities</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-    <a href="#maps">Maps</a>
+    <a href="#teDoen">Hightivities</a>
+    <a href="#contact">Contact</a>  
   </section>
   </div>
 <header id="filters">
-  <div id="Home">
+  <div >
     <H2>De Ultieme Y/N Toerisme Gids</H2>
     <h3>BRUSSEL<button id="themaswitch">🌙</button>
     </h3>
@@ -31,7 +29,7 @@
     <ul id="favLijst"></ul>
   </section>
 
-  <div id="">
+  <div id="home">
     <h3>Welkom in Brussel – Een stad die bruist</h3>
     <p id="mijnstad">
       Brussel is geen stad die je zomaar begrijpt/bezoekt...Ze is een chaos/mix van talen, culturen,straten en geuren. Maar als je, zoals ik, hier je puberjaren en jongvolwassen tijd hebt doorgebracht, dan weet je: Brussel moet je voelen...volledig meemaken.
@@ -42,17 +40,6 @@
     </p>
   </div>
   <br>
-  <!--
-  <div id="maps">
-    <img src="../ProjectDW/images/1steDateZ.jpg" alt="grondpainting bij reuzerad">
-    <img src="../ProjectDW/images/Bedav.jpg" alt="twee handen die een petch delen">
-    <img src="../ProjectDW/images/bxMaBelle.jpg" alt="kleine streetart textje">
-    <p>
-      ADD Maps achter de photos zodat elke Maak de photos aanklikbaar zodat elke photo verwijst naar een map waarop lijst met besproken zaken terug te vinden is  (heeft een thema => dus niet zomaar maps en photos.)
-    </p>
-  </div>
-  <br> 
-  -->
   <div id="visit">
     <h3>
       Best Time For Visits
@@ -62,11 +49,9 @@
         <br>
         <br>
         In april en mei komt de stad tot leven met bloeiende parken en terrasjes vol locals die genieten van de eerste zon.
-
         <br>
         <br>
         September en oktober brengen een gezellige sfeer met minder toeristen en kleurrijke herfstlandschappen in de Warande of het Ter Kamerenbos.
-
         <br>
         <br>
         Wil je een magische ervaring? December betovert Brussel met winterse charme en de sfeervolle kerstmarkt. Maar eerlijk? Brussel verrast altijd, ongeacht het seizoen.
@@ -131,7 +116,7 @@
     
   </div>
   <br>
-  <div id="kunst">
+  <div id="teDoen">
     <h3>
       Hightivities
     </h3>
@@ -143,29 +128,22 @@
 <br><br>
      <strong>Mont des arts</strong> – de meest iconische plekken in Brussel, waar cultuur, geschiedenis en stoners rond een prachtig uitzicht samenkomen. Omringd door culturele instellingen en een fantastisch terras genaamd Plein Publiek...
      <button class="favBtn">❤️</button>
-<br>
+<br><br>
      <strong>Ter Kamerenbos</strong> – Uitgestrekt park, ideaal voor picknicks, joggers en zonsondergangen met een stout sigaretje eventueel.
      <button class="favBtn">❤️</button>
-<br>
+<br><br>
      <strong>Jubelpark</strong> – Historisch park met indrukwekkende triomfboog en musea. Waar ook veel studenten graag hun tijd doorbrengen bij de mooiere temperaturen.
      <button class="favBtn">❤️</button>
-     <br><br>
-     <input type="text" id="searchInput" placeholder="vind deze locaties?...">
-     <section id="results">
-      <h4>Resultaat</h4>
-      <p id="instructie">Ontdek de locaties van de bovenstaande plaatsen in Brussel 📌</p>
-      <ul id="locatielijst"></ul>
-    </section>
 <br><br>
 <p>
      <strong>🎨 Street Art & muurschilderingen</strong>
 <br><br>
      <strong>Striproute</strong> – Muurschilderingen van Kuifje, Lucky Luke en andere Belgische striphelden verspreid over de stad.
      <button class="favBtn">❤️</button>
-<br>
+<br><br>
      <strong>Het Poelaertplein</strong> – voor het imposante Justitiepaleis, biedt een van de mooiste uitzichten over Brussel. Van hieruit zie je de daken van de Marollen en bij helder weer zelfs de Atomium in de verte. Het plein is een populaire plek om even te pauzeren, skaters te spotten of de panoramische lift naar de Marollen te nemen. Een perfecte mix van grandeur en stadsleven!
      <button class="favBtn">❤️</button>
-<br>
+<br><br>
      <strong>Parvis de Saint-Gilles</strong> – Hippe buurt vol kleurrijke murals en urban art.
      <button class="favBtn">❤️</button>
 <br><br>
@@ -186,7 +164,7 @@
     </p>
   </div>
   <hr>
-  <footer>
+  <footer id="contact">
     <p>
       &copy 2025 De Y/N Gids – Brussel – By Grazy241
     </p> 
